@@ -287,7 +287,7 @@ BEGIN
   IDS_PICKMERGEFILE       "Please Choose a Database to Merge"
   IDS_MERGINGDATABASE     "Merging database: %s"
   IDS_MERGECONFLICTS      "Conflicting entries for |%s|%s|%s|. Added merged entry as |%s|%s|%s|"
-  IDS_MERGECOMPLETED      "Merge completed: %d %s added (%d %s)"
+  IDS_MERGECOMPLETED      "Merge completed: %d %s added\n(%d %s, %d %s, %d %s)"
   IDS_MERGECOMPLETED2     "Merge Completed"
 END
 
